--- a/subgeneros/style.css
+++ b/subgeneros/style.css
@@ -14,18 +14,7 @@ body{
   font-style: normal;
   color: white;
 }
-.carrusel_img {
-    object-fit: cover;
-    width: 100%;
-    height: auto;
-    filter: brightness(75%);
-    margin: 20px 0;
-    margin: 20px auto;
-    border: 3px solid #555;
-    box-shadow: 0 0 15px #333;
-    max-width: 100%;
-    height: auto;
-}
+
 body {
     background-color: #000;
     color: #ddd;
@@ -41,10 +30,13 @@ body {
   font-style: normal;
   color: white;
 }
+.nombre_subgenero{
+    margin-top: 30px;
+}
 .descripcion{
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 footer{
     background-color: rgba(43,48,53,1);
@@ -86,6 +78,264 @@ footer{
         margin:0;
         color:white; 
         padding-top: 0;
+    }
+}
+.carrusel_discos{
+    width: 50%;
+}
+
+main{
+    width: 100%;
+    height: 100%;
+}
+body{
+    background-color: black;
+}
+.bloque{
+    justify-content: center;
+}
+.carrusel{
+    display: flex;
+}
+
+#carrusel_texto2{
+    margin-left: 15%;
+    margin-bottom: 18%;
+}
+#carrusel_texto3{
+    margin-left: 35%;
+}
+.carrusel_img {
+    object-fit: cover;
+    width: 100%;
+    height: auto;
+    filter: brightness(75%);
+}
+.titulo_carrusel{
+    font-size: 80px;
+}
+.texto_carrusel{
+    font-size: large;
+}
+
+.metal-mania-regular {
+    color: white;
+    font-family: "Metal Mania", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.lora {
+    color: white;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+.lora_black{
+    color: black;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+.subrayado{
+    text-decoration: underline;
+}
+.card_box{
+    display: flex;
+    justify-content: space-between;
+}
+
+.card_aux{
+    margin-top: 2%;
+}
+.alineamiento{
+    height: 100%;
+}
+.linea_piola{
+    height: 1.5px;
+    width: 90%;
+    margin-bottom: 10px;
+    background-color: white;
+}
+.linea_piola_corta{
+    height: 1px;
+    width: 75%;
+    margin-bottom: 10px;
+    background-color: white;
+    margin-top: 2%;
+}
+
+.container_linea_piola{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+h1{
+    color: white;
+}
+.titulo{
+    width: 35%;
+    margin-right: 70%;
+    margin-left: 20%;
+    margin-top: 5%;
+}
+.titulo_canciones {
+  width: 45%;
+  margin-right: 55%;
+  margin-left: 20%;
+  margin-top: 2%;
+}
+
+
+.integrante{
+    display: flex;
+    width: 90%;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 2%;
+}
+.integrante_palabras{
+    width: 70%;
+    margin-left: 2%;
+}
+.integrante_img{
+    width: 40%;
+    display: flex;
+    justify-content: center;
+}
+.integrante_foto{
+    width: 100%;
+    height: auto;
+}
+.saber_mas{
+    margin-top: 2%;
+    margin-left: 50%;
+    margin-right: 5%;
+}
+.redirectin{
+    text-decoration: none;
+}
+#sub-sexos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+    background-color:rgb(43, 58, 73);
+    padding: 5% 8% 5% 8%;
+    margin-top: 5%;
+}
+
+footer{
+    background-color: rgba(43,48,53,1);
+    height: 60px;
+    display:flex;
+    justify-content: space-around;
+}
+.icono{
+    height: 30px;
+    width: 30px;
+}
+#logos{
+    display: flex;
+    justify-content: space-between;
+
+    padding-top: 20px;
+    margin-right: 1%;
+}
+#copyright{
+    margin:0;
+    color:white; 
+    padding-top: 35px;
+}
+@media(max-width:440px){
+    .carrusel_texto {
+        top: 0;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 35%;
+        padding: 0;
+    }
+}
+@media(max-width: 775px){
+    .titulo_carrusel{
+        font-size: x-large;
+    }
+    .texto_carrusel{
+        font-size: medium;
+    }
+}
+@media(max-width: 483px){
+    .titulo_carrusel{
+        font-size: large;
+    }
+    .texto_carrusel{
+        font-size: small;
+    }
+    .card_box{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        width: 90%;
+    }
+    .card_aux{
+        margin-top: 5%;
+    }
+}
+@media(max-width: 392px){
+    .titulo_carrusel{
+        font-size: medium;
+    }
+    .texto_carrusel{
+        font-size: x-small;
+    }
+    #logos{
+        display: none;
+    }
+}
+@media(max-width:500px){
+    footer{
+        background-color: rgba(43,48,53,1);
+        display:flex;
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 10px;
+    }
+    #copyright{
+        margin:0;
+        color:white; 
+        padding-top: 0;
+    }
+}
+@media(min-width:610px){
+    .integrante_img{
+        width: 220px;
+        height: auto;
+    }
+    .linea_piola_corta{
+        height: 0;
+    }
+}
+@media(max-width:610px){
+    .integrante_img{
+        width: 80%;
+        height: auto;
+    }
+    .integrante_palabras{
+        margin-top: 1%;
+        width: 80%;
+    }
+    .integrante{
+        margin-top: 3%;
+        flex-direction: column;
     }
 }
 
