--- a/subgeneros/style.css
+++ b/subgeneros/style.css
@@ -78,8 +78,9 @@ footer{
         padding-top: 0;
     }
 }
-.carrusel_discos{
+#carouselExampleAutoplaying2{
     width: 50%;
+    margin-bottom: 30px;
 }
 
 main{
@@ -158,7 +159,7 @@ body{
 .linea_piola{
     height: 1.5px;
     width: 90%;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     background-color: white;
 }
 .linea_piola_corta{
@@ -254,18 +255,7 @@ footer{
     color:white; 
     padding-top: 35px;
 }
-@media(max-width:440px){
-    .carrusel_texto {
-        top: 0;
-        bottom: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 35%;
-        padding: 0;
-    }
-}
+
 @media(max-width: 775px){
     .titulo_carrusel{
         font-size: x-large;
