--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ h1{
     width: 100%;
     height: 50%;
     background-color:rgb(43, 58, 73);
-    padding: 5% 8% 5% 8%;
+    padding: 5% 8% 5%;
     margin-top: 5%;
 }
 
@@ -165,6 +165,15 @@ footer{
     height: 60px;
     display:flex;
     justify-content: space-around;
+    align-items: center;
+}
+.footer_helper{
+    display:flex;
+    align-items: center;
+    align-items: start;
+}
+.form_giver{
+    margin-top: 3%;
 }
 .icono{
     height: 30px;
@@ -173,14 +182,13 @@ footer{
 #logos{
     display: flex;
     justify-content: space-between;
-
     padding-top: 20px;
     margin-right: 1%;
 }
 #copyright{
     margin:0;
     color:white; 
-    padding-top: 35px;
+    padding-top: 12px;
 }
 @media(max-width:440px){
     .carrusel_texto {
@@ -226,9 +234,6 @@ footer{
     .texto_carrusel{
         font-size: x-small;
     }
-    #logos{
-        display: none;
-    }
 }
 @media(max-width:500px){
     footer{
@@ -243,6 +248,9 @@ footer{
         margin:0;
         color:white; 
         padding-top: 0;
+    }
+    #logos{
+        display: none;
     }
 }
 @media(min-width:610px){
