--- a/subgeneros/style.css
+++ b/subgeneros/style.css
@@ -36,11 +36,31 @@ body {
 .descripcion{
     margin-top: 20px;
 }
+#sub-sexos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+    background-color:rgb(43, 58, 73);
+    padding: 5% 8% 5%;
+    margin-top: 5%;
+}
+
 footer{
     background-color: rgba(43,48,53,1);
     height: 60px;
     display:flex;
     justify-content: space-around;
+    align-items: center;
+}
+.footer_helper{
+    display:flex;
+    align-items: center;
+    align-items: start;
+}
+.form_giver{
+    margin-top: 3%;
 }
 .icono{
     height: 30px;
@@ -49,14 +69,13 @@ footer{
 #logos{
     display: flex;
     justify-content: space-between;
-
     padding-top: 20px;
     margin-right: 1%;
 }
 #copyright{
     margin:0;
     color:white; 
-    padding-top: 35px;
+    padding-top: 12px;
 }
 @media(max-width: 392px){
     #logos{
